name:                snap-authentication
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Lars Petersen
maintainer:          lars@nyantec.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Snap.Authentication
  build-depends:       base
                     , LDAP
                     , bytestring
                     , text
                     , snap-core
                     , transformers
                     , aeson
                     , base16-bytestring
                     , cookie
  hs-source-dirs:      src
  default-language:    Haskell2010